--- a/e_wallet/pubspec.yaml
+++ b/e_wallet/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_bloc: ^9.1.1
+  block: ^0.0.3
+  bloc: ^9.0.0
+  dio: ^5.9.0
+  fl_chart: ^1.0.0
 
 dev_dependencies:
   flutter_test:
